Fixed card margin issue on mobile

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ main .cards .card {
     box-shadow: 0 0 15px 2px rgb(69, 69, 69);
     border-radius: 6px;
     border: 1px solid var(--accent-color);
-    margin: 30px 10px;
+    margin: 30px 5px;
     width: clamp(200px, 5vw, 500px);
     padding: 10px;
 
